{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 19,
  "lineage": "a268852b-d4b6-c06a-5220-2b9c8102ea33",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:654654557298:internet-gateway/igw-080a26f9c6e13c660",
            "id": "igw-080a26f9c6e13c660",
            "owner_id": "654654557298",
            "region": "eu-central-1",
            "tags": {
              "Name": "kv-lab-igw"
            },
            "tags_all": {
              "Name": "kv-lab-igw"
            },
            "vpc_id": "vpc-0e5b93d04ee6458a9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:654654557298:route-table/rtb-01cc09ef3ab34abb7",
            "id": "rtb-01cc09ef3ab34abb7",
            "owner_id": "654654557298",
            "propagating_vgws": [],
            "region": "eu-central-1",
            "route": [],
            "tags": {
              "Name": "kv-lab-private-rt"
            },
            "tags_all": {
              "Name": "kv-lab-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e5b93d04ee6458a9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "654654557298",
            "id": "rtb-01cc09ef3ab34abb7",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:654654557298:route-table/rtb-0b1512686a0442e1f",
            "id": "rtb-0b1512686a0442e1f",
            "owner_id": "654654557298",
            "propagating_vgws": [],
            "region": "eu-central-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-080a26f9c6e13c660",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "kv-lab-public-rt"
            },
            "tags_all": {
              "Name": "kv-lab-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e5b93d04ee6458a9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "654654557298",
            "id": "rtb-0b1512686a0442e1f",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_a_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-011874340bcfe72e8",
            "region": "eu-central-1",
            "route_table_id": "rtb-01cc09ef3ab34abb7",
            "subnet_id": "subnet-01e68008b5059e7ab"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private_a",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_b_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-014c4b6ddf10aba47",
            "region": "eu-central-1",
            "route_table_id": "rtb-01cc09ef3ab34abb7",
            "subnet_id": "subnet-03f3d049a0bdb410f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private_b",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_a_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b7b2cb45b7269d95",
            "region": "eu-central-1",
            "route_table_id": "rtb-0b1512686a0442e1f",
            "subnet_id": "subnet-0db4aecc9569deb7e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public_a",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_b_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d56d93fbfb457463",
            "region": "eu-central-1",
            "route_table_id": "rtb-0b1512686a0442e1f",
            "subnet_id": "subnet-06e13c5a27aed8a3d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public_b",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:654654557298:subnet/subnet-01e68008b5059e7ab",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.10.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01e68008b5059e7ab",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "654654557298",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Name": "kv-lab-private-a"
            },
            "tags_all": {
              "Name": "kv-lab-private-a"
            },
            "vpc_id": "vpc-0e5b93d04ee6458a9"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "654654557298",
            "id": "subnet-01e68008b5059e7ab",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:654654557298:subnet/subnet-03f3d049a0bdb410f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.10.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03f3d049a0bdb410f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "654654557298",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Name": "kv-lab-private-b"
            },
            "tags_all": {
              "Name": "kv-lab-private-b"
            },
            "vpc_id": "vpc-0e5b93d04ee6458a9"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "654654557298",
            "id": "subnet-03f3d049a0bdb410f",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:654654557298:subnet/subnet-0db4aecc9569deb7e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.10.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0db4aecc9569deb7e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "654654557298",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Name": "kv-lab-public-a"
            },
            "tags_all": {
              "Name": "kv-lab-public-a"
            },
            "vpc_id": "vpc-0e5b93d04ee6458a9"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "654654557298",
            "id": "subnet-0db4aecc9569deb7e",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:654654557298:subnet/subnet-06e13c5a27aed8a3d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06e13c5a27aed8a3d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "654654557298",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Name": "kv-lab-public-b"
            },
            "tags_all": {
              "Name": "kv-lab-public-b"
            },
            "vpc_id": "vpc-0e5b93d04ee6458a9"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "654654557298",
            "id": "subnet-06e13c5a27aed8a3d",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:654654557298:vpc/vpc-0e5b93d04ee6458a9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-0f0e29d229fc0e04d",
            "default_route_table_id": "rtb-0defb50501b9e1159",
            "default_security_group_id": "sg-045dd8d9af2959ccd",
            "dhcp_options_id": "dopt-0be63f527222cb7ca",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e5b93d04ee6458a9",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0defb50501b9e1159",
            "owner_id": "654654557298",
            "region": "eu-central-1",
            "tags": {
              "Name": "kv-lab-vpc"
            },
            "tags_all": {
              "Name": "kv-lab-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "654654557298",
            "id": "vpc-0e5b93d04ee6458a9",
            "region": "eu-central-1"
          }
        }
      ]
    }
  ]
}